--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           ><img id="twitter" src="images/twitter.jpg" alt="img"
         /></a>
 
-        <a href="">
+        <a href="https://github.com/Ayushgairola6/Front-End-portfolio-project">
           <img
             id="github"
             src="images/b51b78ecc9e5711274931774e433b5e6.jpg"
